--- a/fission-ui.yml
+++ b/fission-ui.yml
@@ -31,10 +31,25 @@ metadata:
   labels:
     svc: fission-ui
 spec:
-  type: NodePort
   ports:
   - port: 80
     targetPort: 80
-    nodePort: 31319
   selector:
     svc: fission-ui
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  labels:
+    k8s-app: fission-ui
+  name: fission-ui
+  namespace: fission
+spec:
+  rules:
+    - host: fission-ui.cloudapps.cloud-cafe.in
+      http:
+        paths:
+          - backend:
+              serviceName: fission-ui
+              servicePort: 80
